src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Birthday_Month__c</fullName>
        <formula>TEXT(MONTH(Date_of_birth__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday_day__c</fullName>
        <formula>TEXT(DAY(Date_of_birth__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_mail_Adress__c</fullName>
        <label>E-mail Adress</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Pr__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <inlineHelpText>Formats for UK Postal Code:
- AA9A 9AA
- A9A 9AA
- A9 9AA
- A99 9AA
- AA9 9AA
- AA99 9AA</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_number_11_characters</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Telephone_Number__c , &quot;\\D*?(\\d\\D*?){11}&quot;))</errorConditionFormula>
        <errorDisplayField>Telephone_Number__c</errorDisplayField>
        <errorMessage>Type correct telephone number (+00 000 000 000)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_Poland</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL (Country__c,&quot;Poland&quot;) ,
  REGEX( Zip_Postal_Code__c , &quot;[0-9]{2}-[0-9]{3}&quot;)
 )</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Postal code must be in 99-999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_UK</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL (Country__c,&quot;United Kingdom&quot;),

NOT( 

OR(

ISNULL(  Zip_Postal_Code__c  ),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),

REGEX( Zip_Postal_Code__c , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)

)

)
)</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Postal code must be in United Kingdom postal code format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_code_USA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL (Country__c,&quot;United States&quot;) ,
NOT(REGEX( Zip_Postal_Code__c , &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>country_code_on_left_side</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT( Telephone_Number__c , 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
        <errorDisplayField>Telephone_Number__c</errorDisplayField>
        <errorMessage>Add + for country code.</errorMessage>
    </validationRules>
</CustomObject>